--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,9 @@
 
     <properties>
         <java.version>1.7</java.version>
+        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
 
     <dependencies>
